--- a/index.html
+++ b/index.html
@@ -1,14 +1,18 @@
 <!doctype html>
 <html lang="es">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" href="/favicon.jpg" />
-    <title>3Bufalos | Agencia de IA para Turismo</title>
-    <meta name="description" content="Agencia de Inteligencia Artificial especializada en turismo. Actualización de sitios web, automatización y soluciones digitales para agencias de viaje en Argentina." />
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="icon" href="/favicon.png" />
+  <title>3Bufalos | Agencia de IA para Turismo</title>
+  <meta name="description"
+    content="Agencia de Inteligencia Artificial especializada en turismo. Actualización de sitios web, automatización y soluciones digitales para agencias de viaje en Argentina." />
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.tsx"></script>
+</body>
+
 </html>
